--- a/views/tmpl/admin/user/add-user.html
+++ b/views/tmpl/admin/user/add-user.html
@@ -375,7 +375,7 @@
 															<div class="modal-footer">
 																<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cleardataSchedule()"><i class="fa fa-arrow-left"></i> Cancel</button>
 																<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c close_add" ng-click="cancel()" ng-hide="schedule.schedule_id"><i class="fa fa-arrow-right" ></i> Save</button>	
-																<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c" ng-click="check_submit(schedule.schedule_id, schedule)" ng-show="schedule.schedule_id"><i class="fa fa-arrow-right"></i> Save</button>	
+																<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c" ng-click="check_submit(schedule.schedule_id, schedule, form_data, form_name)" ng-show="schedule.schedule_id"><i class="fa fa-arrow-right"></i> Save</button>	
 															</div>
 														</form>		
 													</script>
@@ -410,9 +410,9 @@
 																		<label for="">Assign Doors</label><br/>
 																		<select Multipng-options=le chosen="{width: '100%'}" ng-options="item.door_id as item.door_name for item in door_lists" ng-model="accesscode.door_id" multiple required> </select>
 																	</div>
-																	<div class="form-group col-sm-6 col-md-2 access_div">
+																	<div class="form-group col-sm-6 col-md-2 access_div" ng-hide="assingned_usergroups.length" >
 																		<label for="">Add Schedule</label><br/>
-																		<a ng-click="scheduleopen('lg')" ng-hide="assingned_usergroups.length" class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Add</a>
+																		<a ng-click="scheduleopen('lg')" class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Add</a>
 																	</div>
 																	<div class="form-group col-sm-6 col-md-2">
 																		<label for="">Status</label><br/>
@@ -447,7 +447,7 @@
 																				<td>{{accesscode.Door_Name}}</td>
 																				<td class="credintialicon ta-c">
 																					<a href="" uib-tooltip="View" ng-click="viewschedule(accesscode.credential_schedule_id)" ng-hide="accesscode.credential_schedule_id == 0"><i class="fa fa-eye" aria-hidden="true"></i></a> 
-																					<a href="" uib-tooltip="Edit" ng-click="scheduleviewopen(accesscode.credential_schedule_id, 'edit')" ng-hide="accesscode.credential_schedule_id == 0"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a> 
+																					<a href="" uib-tooltip="Edit" ng-click="scheduleviewopen(accesscode.credential_schedule_id, 'edit', accesscode, 'access_code')" ng-hide="accesscode.credential_schedule_id == 0"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a> 
 																					<a href="" uib-tooltip="Remove" ng-click="deleteSchedule(accesscode, 'access_code')" ng-hide="accesscode.credential_schedule_id == 0"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
 																				</td>
 																				<td>
@@ -498,9 +498,9 @@
 																		<label for="">Assign Doors</label><br/>
 																		<select Multipng-options=le chosen="{width: '100%'}" ng-options="item.door_id as item.door_name for item in door_lists" ng-model="phoneCode.door_id" multiple required></select>
 																	</div>
-																	<div class="form-group col-sm-6 col-md-2 phone_div">
+																	<div class="form-group col-sm-6 col-md-2 phone_div" ng-hide="assingned_usergroups.length">
 																		<label for="">Add Schedule</label><br/-->
-																		<a ng-click="scheduleopen('lg')"  ng-hide="assingned_usergroups.length" class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Add</a>
+																		<a ng-click="scheduleopen('lg')"  class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Add</a>
 																	</div>
 																	<div class="form-group col-sm-6 col-md-2">
 																		<label for="">Status</label><br/>
@@ -627,7 +627,7 @@
 																				</td>
 																				<td class="credintialicon ta-c"> 
 																					<a href="" uib-tooltip="View" ng-click="viewschedule(phone_code.credential_schedule_id)" ng-hide="phone_code.credential_schedule_id == 0"><i class="fa fa-eye" aria-hidden="true"></i></a> 
-																					<a href="" uib-tooltip="Edit" ng-click="scheduleviewopen(phone_code.credential_schedule_id, 'edit')" ng-hide="phone_code.credential_schedule_id == 0"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
+																					<a href="" uib-tooltip="Edit" ng-click="scheduleviewopen(phone_code.credential_schedule_id, 'edit', phone_code, 'phone_code')" ng-hide="phone_code.credential_schedule_id == 0"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
 																					<a href="" uib-tooltip="Remove" ng-click="deleteSchedule(phone_code, 'phone_code')" ng-hide="phone_code.credential_schedule_id == 0"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
 																				</td>
 																				<td>
@@ -759,9 +759,9 @@
 																		<label for="">Assign Doors</label><br/>
 																		<select Multipng-options=le chosen="{width: '100%'}" ng-options="item.door_id as item.door_name for item in door_lists" ng-model="wiegand.door_id" multiple></select>
 																	</div>
-																	<div class="form-group col-sm-6 col-md-3" >
+																	<div class="form-group col-sm-6 col-md-3 wiegand_div" ng-hide="assingned_usergroups.length" >
 																		<label for="">Add Schedule</label><br/>
-																		<a ng-click="scheduleopen('lg')" ng-hide="assingned_usergroups.length" class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a wiegand_div">Add</a>
+																		<a ng-click="scheduleopen('lg')" class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Add</a>
 																	</div>
 																</div>
 																<div class="row">
@@ -800,7 +800,7 @@
 																				<td class="ta-c">{{wiegand_code.Detail.wiegand_facility_code}}</td>
 																				<td class="credintialicon ta-c">
 																					<a href="" uib-tooltip="View" ng-click="viewschedule(wiegand_code.credential_schedule_id)" ng-hide="wiegand_code.credential_schedule_id == 0"><i class="fa fa-eye" aria-hidden="true"></i></a> 
-																					<a href="" uib-tooltip="Edit" ng-click="scheduleviewopen(wiegand_code.credential_schedule_id, 'edit')" ng-hide="wiegand_code.credential_schedule_id == 0"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
+																					<a href="" uib-tooltip="Edit" ng-click="scheduleviewopen(wiegand_code.credential_schedule_id, 'edit', wiegand_code, 'wiegand_code')" ng-hide="wiegand_code.credential_schedule_id == 0"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
 																					<a href="" uib-tooltip="Remove" ng-click="deleteSchedule(wiegand_code, 'wiegand_code')" ng-hide="wiegand_code.credential_schedule_id == 0"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
 																				</td>					
 																				<td>{{wiegand_code.status==0?'Inactive':'Active'}}</td>
@@ -934,9 +934,9 @@
 																		<label for="">Assign Doors</label><br/>
 																		<select Multipng-options=le chosen="{width: '100%'}" ng-options="item.door_id as item.door_name for item in door_lists" ng-model="ble_code.door_id" multiple required></select>
 																	</div>
-																	<div class="form-group col-sm-6 col-md-3" >
+																	<div class="form-group col-sm-6 col-md-3 ble_div" ng-hide="assingned_usergroups.length" >
 																		<label for="">Add Schedule</label><br/>
-																		<a ng-click="scheduleopen('lg')" ng-hide="assingned_usergroups.length" class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a ble_div">Add</a>
+																		<a ng-click="scheduleopen('lg')" class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Add</a>
 																	</div>
 																</div>
 																<div class="row">
@@ -975,7 +975,7 @@
 																				<td>{{blecode.Door_Name}}</td>
 																				<td class="credintialicon ta-c">
 																					<a href="" uib-tooltip="View" ng-click="viewschedule(blecode.credential_schedule_id)" ng-hide="blecode.credential_schedule_id == 0"><i class="fa fa-eye" aria-hidden="true"></i></a> 
-																					<a href="" uib-tooltip="Edit" ng-click="scheduleviewopen(blecode.credential_schedule_id, 'edit')" ng-hide="blecode.credential_schedule_id == 0"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
+																					<a href="" uib-tooltip="Edit" ng-click="scheduleviewopen(blecode.credential_schedule_id, 'edit', blecode, 'ble_code')" ng-hide="blecode.credential_schedule_id == 0"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
 																					<a href="" uib-tooltip="Remove" ng-click="deleteSchedule(blecode, 'ble_code')" ng-hide="blecode.credential_schedule_id == 0"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
 																				</td>
 																				<td>
